--- a/portlets/calendar-portlet/build.xml
+++ b/portlets/calendar-portlet/build.xml
@@ -2,5 +2,7 @@
 <!DOCTYPE project>
 
 <project name="calendar-portlet" basedir="." default="deploy">
+	<property name="ivy.resolve.transitive.dependencies" value="true" />
+	
 	<import file="../build-common-portlet.xml" />
 </project>
